# ids721-mini7

./: README.md
yx248-mini7/: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  dataset_sample.csv  docker-compose.yml
yx248-mini7/src/: lib.rs  main.rs
